--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "antd": "^5.20.1",
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
