--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
