--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.20.1",
+    "ant": "^0.2.0",
+    "antd": "^5.21.6",
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
     "jspdf": "^2.5.1",
